3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

doc/settings: Document create_home_portals outside of comments in lib/settings.
server/player.c: Comment cleanup. No code changes.
server/apply.c: Add check to auto-dropping of applied transports to not
   drop in shops.
common/treasure.c: Make fix_flesh_item only run when the donor is a
   monster. Fixes bug #1555569.
Alex Schultz 2006-09-10

server/apply.c, server/c_object.c, server/player.c: Use is_in_shop() to
   check if it's in a a shop.
server/shop.c, include/sproto.h: Add is_in_shop() and coords_in_shop()
   based on addition of is_in_shop() in cf+ by elmex.
server/apply.c: When applying a transport which is in an inventory, drop
   the transport.
server/c_object.c, include/sproto.h: Make drop_object return a pointer to
   the dropped object, NULL otherwise.
Alex Schultz 2006-09-09

common/treasure.c: add exp and other_arch to flesh; more info about
   the original monster, to be used in spells or scripts.
Lalo Martins 2006-09-10

doc/Developers/protocol: Fix off by one on how many layers are currently
   defined.
server/swap.c: When loading up temp maps, make sure timeout is set to 0 -
  fixes bug 1539203.
MSW 2006-09-06

lib/collect.pl.in: Explicitly ignore backup files (*~), just because they
   really annoy me.
Lalo Martins 2006-09-06

server/gods.c: Make get_god_for_race() safe for gods of no race.
Alex Schultz 2006-09-06

server/shop.c: Make (real) sure shops won't give amber/jade
Lalo Martins 2006-09-06

Apply patch #551467 (type mismatch in surround_flag3() can cause SIGSEGV)
 courtesy Mark Kidder.
 random_maps/rproto.h wall.c 
Ryo 2006-09-04
